@startuml class_diagram.puml
class David64OpenAI {
  +get_agent_response()
  +get_process_general_mml()
}
class CosmicWorksLangChain {
  +get_process_langchain()
  +create_local_faiss_index()
  +download_faiss_index_from_blob()
}
class CosmicWorksDb{
  +get_container()
  +search_products()
  +search_employees()
  +create_conversation_item()
}
David64OpenAI --> CosmicWorksLangChain
David64OpenAI --> CosmicWorksDb
CosmicWorksLangChain --> CosmicWorksDb
@enduml